--- a/barbershop-item.html
+++ b/barbershop-item.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Магазин</title> 
+    <title>HTML Academy: Барбершоп</title> 
   </head>
   <body>
     <header class="main-header">
